--- a/todo.txt
+++ b/todo.txt
@@ -5,4 +5,4 @@ reset all git dir dates
 	=> git ls-files | sed 's/[^\/]\+$//' | sort -u
 work on bare repos
 	=> latest git date for all
-
+don't list files for bare repos
